<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michaelmonty.stockquotes_monty.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_stock_symbol_text"
            android:textStyle="bold"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_gravity="left"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="right"
            android:id="@+id/Symbol_Value"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol_text"
            android:textStyle="bold"
            android:gravity="left"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:id="@+id/symbol"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textStyle="bold"
            android:gravity="left"/>
        <TextView
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:id="@+id/name"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_price_text"
            android:textStyle="bold"
            android:gravity="left"/>
        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:id="@+id/last_trade_price"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_time_text"
            android:textStyle="bold"
            android:gravity="left"/>
        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:id="@+id/last_trade_time"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_text"
            android:textStyle="bold"
            android:gravity="left"/>
        <TextView
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:id="@+id/change"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_text"
            android:textStyle="bold"
            android:gravity="left"/>
        <TextView
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:id="@+id/week_range"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="CAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cal_button"
            android:layout_marginEnd="20dp" />

    </LinearLayout>


</LinearLayout>
